--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -239,11 +239,11 @@
   "item.kubejs.realgar_geode": "§c雄黄§r晶洞",
   "item.kubejs.realgar_geode.tooltip": "§7一块看上去平平无奇的石头，里面藏着漂亮的§c雄黄",
   "item.kubejs.thorium_fuel_rod": "钍燃料棒",
-  "item.kubejs.highly_enriched_uranium_fuel_rod": "高富集铀燃料棒",
+  "item.kubejs.highly_enriched_uranium_fuel_rod": "高浓度铀燃料棒",
   "item.kubejs.highly_enriched_uranium_fuel_rod.tooltip": "§2200亿卡路里",
   "item.kubejs.low_enriched_uranium_fuel_rod": "低富集铀燃料棒",
   "item.kubejs.depleted_thorium_fuel_rod": "枯竭钍燃料棒",
-  "item.kubejs.depleted_highly_enriched_uranium_fuel_rod": "枯竭高富集铀燃料棒",
+  "item.kubejs.depleted_highly_enriched_uranium_fuel_rod": "枯竭高浓度铀燃料棒",
   "item.kubejs.depleted_highly_enriched_uranium_fuel_rod.tooltip": "§7不再含有200亿卡路里",
   "item.kubejs.depleted_low_enriched_uranium_fuel_rod": "枯竭低富集铀燃料棒",
   "item.kubejs.compressed_mycelium": "压缩菌丝体",
@@ -372,7 +372,7 @@
   "item.kubejs.uhv_voltage_coil": "极高压线圈",
   "item.kubejs.uhv_voltage_coil.tooltip": "§l§4薄§f荷§r线圈",
   "item.kubejs.uev_voltage_coil": "极超压线圈",
-  "item.kubejs.uev_voltage_coil.tooltip": "§l§2恒§3星§9奥§3鲁§2极§3光§9合§3金§r线圈",
+  "item.kubejs.uev_voltage_coil.tooltip": "§l§2恒§3星§9奥§3鲁§2极§3光§9-§3博§2雷§3亚§9尔§r线圈",
   "item.kubejs.uiv_voltage_coil": "极巨压线圈",
   "item.kubejs.uiv_voltage_coil.tooltip": "至尊线圈",
   "item.kubejs.runic_convergence_circuit_board": "覆符文电路基板",
