fix(zh_cn): unify 混合液 -> 混合物
According to 明胶混合物 in gtceu modern, we should use 混合物 over 混合液
even for liquid.

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -249,9 +249,9 @@
   "material.gtceu.titanite_slurry": "榍石浆液",
   "material.gtceu.silica_gel": "硅胶",
   "material.gtceu.titanite_slurry_residue": "榍石浆液残液",
-  "material.gtceu.hydroxo_dioxo_titanite_mixture": "羟基(双氧)榍石混合液",
+  "material.gtceu.hydroxo_dioxo_titanite_mixture": "羟基(双氧)榍石混合物",
   "material.gtceu.titanite_residue": "榍石残液",
-  "material.gtceu.titanium_tetrachloride_mixture": "四氯化钛混合液",
+  "material.gtceu.titanium_tetrachloride_mixture": "四氯化钛混合物",
   "material.gtceu.titanite": "榍石",
   "material.gtceu.zavaritskite": "氟氧铋矿",
   "material.gtceu.calcium_perchlorate": "高氯酸钙",
@@ -477,9 +477,9 @@
   "material.gtceu.rare_ore_residue": "稀有矿残液",
   "material.gtceu.raw_ore_slurry": "粗矿浆液",
   "material.gtceu.mixed_mineral_residue": "混合矿石残液",
-  "material.gtceu.sulfuric_mineral_mixture": "硫酸矿石混合液",
-  "material.gtceu.oxygenous_mineral_mixture": "含氧矿石混合液",
-  "material.gtceu.molten_ore_mixture": "熔融矿石混合液",
+  "material.gtceu.sulfuric_mineral_mixture": "硫酸矿石混合物",
+  "material.gtceu.oxygenous_mineral_mixture": "含氧矿石混合物",
+  "material.gtceu.molten_ore_mixture": "熔融矿石混合物",
   "material.gtceu.molten_bauxite_ore": "熔融铝土矿",
   "material.gtceu.molten_pitchblende_ore": "熔融沥青铀矿",
   "material.gtceu.molten_molybdenite_ore": "熔融辉钼矿",
@@ -538,7 +538,7 @@
   "material.gtceu.magnemalic_estaltadyne": "Magnemalic§c埃斯塔尔特化合物§r",
   "material.gtceu.tytite_estaltadyne": "钛§c埃斯塔尔特化合物§r",
   "material.gtceu.estaltadyne_hydride": "氢化§c埃斯塔尔特化合物§r",
-  "material.gtceu.enriched_estaltadyne_mixture": "富集§c§o埃斯塔尔特化合物§r混合液",
+  "material.gtceu.enriched_estaltadyne_mixture": "富集§c§o埃斯塔尔特化合物§r混合物",
   "material.gtceu.enriched_estaltadyne_solution": "富集§c§o埃斯塔尔特化合物§r溶液",
   "material.gtceu.enriched_estaltadyne_slurry": "富集§c§o埃斯塔尔特化合物§r浆液",
   "material.gtceu.enriched_estaltadyne_naquide_slurry_mixture": "富集§c§o埃斯塔尔特化合物§r§2§o硅岩§r混合浆液",
@@ -546,10 +546,10 @@
   "material.gtceu.hyper_enriched_estaltadyne_slurry_residue": "高浓度§c§o埃斯塔尔特化合物§r浆液残液",
   "material.gtceu.sodium_hyper_enriched_estaltadyne_sludge": "[钠]高浓度§c§o埃斯塔尔特化合物§r浆液",
   "material.gtceu.hyper_enriched_estaltadyne_concentrate": "高浓缩§c§o埃斯塔尔特化合物§r富集溶液",
-  "material.gtceu.molten_estaltadyne_mixture": "熔融§c埃斯塔尔特化合物§r混合液",
+  "material.gtceu.molten_estaltadyne_mixture": "熔融§c埃斯塔尔特化合物§r混合物",
   "material.gtceu.adamantine": "§6坚玉§r",
-  "material.gtceu.molten_adamantamite_mixture": "熔融§6坚玉化合物§r混合液",
-  "material.gtceu.enriched_adamantamite_mixture": "富集§6坚玉化合物§r混合液",
+  "material.gtceu.molten_adamantamite_mixture": "熔融§6坚玉化合物§r混合物",
+  "material.gtceu.enriched_adamantamite_mixture": "富集§6坚玉化合物§r混合物",
   "material.gtceu.adamantamite": "§6坚玉化合物§r",
   "material.gtceu.adamantamite_metaltide": "金属化§6坚玉化合物§r",
   "material.gtceu.adamantamite_magnide": "磁化§6坚玉化合物§r",
@@ -557,8 +557,8 @@
   "material.gtceu.adamantine_5": "§6坚玉化合物§r-5",
   "material.gtceu.adamantine_hydroxide": "氢氧化§6坚玉化合物§r",
   "material.gtceu.mythril": "§3秘银§r",
-  "material.gtceu.molten_mythrillic_mixture": "熔融§3秘银化合物§r混合液",
-  "material.gtceu.enriched_mythrillic_mixture": "富集§3秘银化合物§r混合液",
+  "material.gtceu.molten_mythrillic_mixture": "熔融§3秘银化合物§r混合物",
+  "material.gtceu.enriched_mythrillic_mixture": "富集§3秘银化合物§r混合物",
   "material.gtceu.mythrillic": "§3秘银化合物§r",
   "material.gtceu.mythrillic_carbinide": "碳化§3秘银化合物§r",
   "material.gtceu.mythrillic_metlide": "氢化§3秘银化合物§r",
@@ -764,7 +764,7 @@
   "material.gtceu.drac_endrocritic_medium": "龙能内腺介质液",
   "material.gtceu.drac_aurouric_endrocrinal_medium": "龙能极光内腺介质液",
   "material.gtceu.precursor_serum": "前驱血清",
-  "material.gtceu.abyssal_nutrient_blend": "深渊营养混合液",
+  "material.gtceu.abyssal_nutrient_blend": "深渊营养混合物",
   "material.gtceu.condensed_abyssal_nutrient_blend": "浓缩深渊营养液",
   "material.gtceu.amino_primed_medium": "氨基活化培养基",
   "material.gtceu.drac_peptide_amino_residue": "龙能肽氨基残液",
@@ -937,8 +937,8 @@
   "material.gtceu.rich_mixture_drilling_formula": "富混合物钻井液",
   "material.gtceu.molten_waste": "熔融废液",
   "material.gtceu.cooled_molten_waste": "冷却熔融废料",
-  "material.gtceu.impure_molten_ore_mixture": "含杂熔融矿石混合液",
-  "material.gtceu.pure_molten_ore_mixture": "纯净熔融矿石混合液",
+  "material.gtceu.impure_molten_ore_mixture": "含杂熔融矿石混合物",
+  "material.gtceu.pure_molten_ore_mixture": "纯净熔融矿石混合物",
   "material.gtceu.cooled_molten_bauxite_ore": "冷却熔融铝土矿",
   "material.gtceu.cooled_molten_pitchblende_ore": "冷却熔融沥青铀矿",
   "material.gtceu.cooled_molten_molybdenite_ore": "冷却熔融辉钼矿",
@@ -1047,7 +1047,7 @@
   "material.gtceu.nutrient_rich_fertilizer_solution": "富营养肥料溶液",
   "material.gtceu.seaweed_oil": "海藻油",
   "material.gtceu.liquefied_nutrient_paste": "液态营养糊剂",
-  "material.gtceu.biostimulating_mixture": "生物刺激性混合液",
+  "material.gtceu.biostimulating_mixture": "生物刺激性混合物",
   "block.gtceu.perfect_oc_subtick.tooltip.1": "支持§6无损超频§f和§c亚时间刻并行",
   "block.gtceu.subtick.tooltip.1": "支持§c亚时间刻并行",
   "block.gtceu.subtick_coil_parallel.tooltip.1": "支持§c亚时间刻并行§r和§b线圈并行",
