fix(zh_cn): change nx -> n倍

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -835,7 +835,7 @@
   "block.gtceu.supreme_plasma_turbine.tooltip.3": "§e基础产能功率：§f16384 EU/t",
   "block.gtceu.supreme_plasma_turbine.tooltip.4": "§7转子支架等级超过§9IV§7时，每级增加10%效率，并翻倍输出功率。",
   "block.gtceu.supreme_plasma_turbine.tooltip.5": "§8-----------------------------------",
-  "block.gtceu.supreme_plasma_turbine.tooltip.6": "§c§u涡轮并行：§7涡轮可同时运行最多§a6x§7普通大型等离子涡轮的配方。",
+  "block.gtceu.supreme_plasma_turbine.tooltip.6": "§c§u涡轮并行：§7涡轮可同时运行最多§a6倍于§7普通大型等离子涡轮的配方。",
   "block.gtceu.supreme_plasma_turbine.tooltip.7": "§8-----------------------------------",
   "block.gtceu.supreme_plasma_turbine.tooltip.8": "§6润滑剂加速：§7每小时消耗1000B§f二硫化钨§7可提供§a+25%§fEU/t§7输出，失败会导致§4-10%§fEU/t§7输出。",
   "block.gtceu.supreme_plasma_turbine.tooltip.9": "§8-----------------------------------",
@@ -850,7 +850,7 @@
   "block.gtceu.nyinsane_plasma_turbine.tooltip.3": "§e基础产能功率：§f16384 EU/t",
   "block.gtceu.nyinsane_plasma_turbine.tooltip.4": "§7转子支架等级超过§9IV§7时，每级增加10%效率，并翻倍输出功率。",
   "block.gtceu.nyinsane_plasma_turbine.tooltip.5": "§8-----------------------------------",
-  "block.gtceu.nyinsane_plasma_turbine.tooltip.6": "§c§u涡轮并行：§7涡轮可同时运行最多§a12x§7普通大型等离子涡轮的配方。",
+  "block.gtceu.nyinsane_plasma_turbine.tooltip.6": "§c§u涡轮并行：§7涡轮可同时运行最多§a12倍于§7普通大型等离子涡轮的配方。",
   "block.gtceu.nyinsane_plasma_turbine.tooltip.7": "§8-----------------------------------",
   "block.gtceu.nyinsane_plasma_turbine.tooltip.8": "§6润滑剂加速：§7每小时消耗2500B§f二硫化钨§7可提供§a+50%§fEU/t§7输出，失败会导致§4-20%§fEU/t§7输出。",
   "block.gtceu.nyinsane_plasma_turbine.tooltip.9": "§8-----------------------------------",
