fix(zh_cn): fix runic_laser_source_base
* 符文激光源仓 -> 符文激光源水晶

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -214,7 +214,7 @@
   "material.gtceu.echo_r": "回响流体",
   "material.gtceu.raw_void": "粗虚空",
   "material.gtceu.void": "虚空",
-  "material.gtceu.runic_laser_source_base": "符文激光源仓",
+  "material.gtceu.runic_laser_source_base": "符文激光源水晶",
   "block.gtceu.super_pressure_heat_chamber": "超高压加热仓",
   "block.gtceu.heat_chamber": "加热仓",
   "block.gtceu.stargate_component_assembly": "星门组件组装机",
