fix(zh_cn): unify melodium and stellarium
* 旋律合金 -> 旋律
* 恒星合金 -> 恒星

This made is to keep consistency with 海晶 (Prismalium), which is used
in thermalendergy.

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -153,8 +153,8 @@
   "material.gtceu.twinite": "双子物质",
   "material.gtceu.dragonsteel": "龙钢",
   "material.gtceu.prismalium": "海晶",
-  "material.gtceu.melodium": "旋律合金",
-  "material.gtceu.stellarium": "恒星合金",
+  "material.gtceu.melodium": "旋律",
+  "material.gtceu.stellarium": "恒星",
   "material.gtceu.sulfur_dichloride": "二氯化硫",
   "material.gtceu.thionyl_chloride": "氯化亚砜",
   "material.gtceu.sulfuryl_chloride": "磺酰氯",
@@ -1131,7 +1131,7 @@
   "material.gtceu.rhenate_w": "铼钨复合体",
   "material.gtceu.borealic_steel": "博雷亚尔钢",
   "material.gtceu.hvga_steel": "超虚空引力消解钢",
-  "material.gtceu.melastrium_mox": "哈斯特旋律合金 MOX",
+  "material.gtceu.melastrium_mox": "哈斯特旋律 MOX",
   "material.gtceu.trikoductive_neutro_steel": "三向中性钢",
   "material.gtceu.soul_ascendant_cuperite": "飞升合金",
   "material.gtceu.mythrotight_carbide_steel": "秘银强化碳化钢",
