--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -486,7 +486,7 @@
   "block.kubejs.enriched_naquadah_machine_casing": "富集硅岩机械方块",
   "block.kubejs.enriched_naquadah_pipe_casing": "富集硅岩管道方块",
   "block.kubejs.enriched_naquadah_gearbox": "富集硅岩齿轮箱机械方块",
-  "block.kubejs.laser_casing": "集光扫射汇聚恒星合金机械方块",
+  "block.kubejs.laser_casing": "集光扫射汇聚恒星机械方块",
   "block.kubejs.inscribe_casing": "龙骨蚀刻操纵聚能符文合金机械方块",
   "block.kubejs.core_casing": "究极紫珀能量核心神龙指定预注能机械方块",
   "block.kubejs.meshblock": "防腐木硬化筛网",
@@ -523,8 +523,8 @@
   "block.kubejs.twinite_casing": "双子物质耐弯折机械方块",
   "block.kubejs.dragonsteel_casing": "坚不可摧龙钢机械方块",
   "block.kubejs.prismalium_casing": "跃迁海晶机械方块",
-  "block.kubejs.melodium_casing": "强化旋律合金机械方块",
-  "block.kubejs.stellarium_casing": "结构一体化恒星合金机械方块",
+  "block.kubejs.melodium_casing": "强化旋律机械方块",
+  "block.kubejs.stellarium_casing": "结构一体化恒星机械方块",
   "block.kubejs.ancient_runicalium_casing": "注入强化型远古符文合金机械方块",
   "block.kubejs.noble_mixing_casing": "贵族搅拌机械机械方块",
   "block.kubejs.titanic_blasting_casing": "泰坦合金冶炼机械方块",
