fix(zh_cn): correct 硅岩下界合金 -> 硅岩下界合金水晶
This is made because it is in gem-shape in the game.

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -192,7 +192,7 @@
   "material.gtceu.chlorine_trifluoride": "三氟化氯",
   "material.gtceu.tetrachloroethylene": "四氯乙烯",
   "material.gtceu.pure_netherite": "纯净下界合金",
-  "material.gtceu.naquadic_netherite": "硅岩下界合金",
+  "material.gtceu.naquadic_netherite": "硅岩下界合金水晶",
   "material.gtceu.weapon_grade_naquadah": "武器级硅岩",
   "material.gtceu.debris": "残骸",
   "material.gtceu.purified_debris": "纯净残骸",
