--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -188,7 +188,7 @@
   "item.kubejs.end_boots": "地狱锻造靴子",
   "item.kubejs.end_talisman": "远古龙翼",
   "item.kubejs.end_talisman.tooltip": "§5远古龙巨大翅膀的残骸",
-  "item.kubejs.naquadic_netherite_fibers": "硅岩下界合金纤维",
+  "item.kubejs.naquadic_netherite_fibers": "硅岩下界合金水晶纤维",
   "item.kubejs.naquadic_netherite_fibers.tooltip": "最强的盔甲材料",
   "item.kubejs.coin": "星际科技币",
   "item.kubejs.coin.tooltip": "§7在任务书的商店章节中可消费这些硬币",
