fix(zh_cn): correct 双子能 -> 双子能水晶
This is made because it is in gem-shape in the game.

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -330,7 +330,7 @@
   "material.gtceu.benzotrichloride": "苯氯仿",
   "material.gtceu.44_difluorobenzophenone": "4,4-二氟二苯甲酮",
   "material.gtceu.polyether_ether_ketone": "聚醚醚酮",
-  "material.gtceu.diatron": "双子能",
+  "material.gtceu.diatron": "双子能水晶",
   "material.gtceu.inferium_steel": "炼狱钢",
   "material.gtceu.prudentium_steel": "初级精华钢",
   "material.gtceu.tertium_steel": "三级钢",
