fix(zh_cn): unify 末影合金 -> 末影

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -148,7 +148,7 @@
   "material.gtceu.soul_infused": "注能灵魂合金",
   "material.gtceu.signalum": "信素",
   "material.gtceu.lumium": "流明",
-  "material.gtceu.enderium": "末影合金",
+  "material.gtceu.enderium": "末影",
   "material.gtceu.shellite": "壳能",
   "material.gtceu.twinite": "双子物质",
   "material.gtceu.dragonsteel": "龙钢",
