--- a/kubejs/assets/kubejs/lang/zh_cn.json
+++ b/kubejs/assets/kubejs/lang/zh_cn.json
@@ -518,7 +518,7 @@
   "block.kubejs.runic_transportation_casing": "跃迁蚀刻符文注入机械方块",
   "block.kubejs.runic_pathway_casing": "路径蚀刻符文注入机械方块",
   "block.kubejs.signalum_casing": "超高压耐高温信素机械方块",
-  "block.kubejs.enderium_casing": "耐热波动末影合金机械方块",
+  "block.kubejs.enderium_casing": "耐热波动末影机械方块",
   "block.kubejs.shellite_casing": "超抗性壳能机械方块",
   "block.kubejs.twinite_casing": "双子物质耐弯折机械方块",
   "block.kubejs.dragonsteel_casing": "坚不可摧龙钢机械方块",
