fix(zh_cn): change 注能灵魂合金 -> 注灵
Use translation from thermal_extra.

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -145,7 +145,7 @@
   "block.gtceu.large_rock_crusher.tooltip.0": "§7一台更大型的碎岩机，处理材料时更加节能。",
   "block.gtceu.large_rock_crusher.tooltip.1": "支持§6无损超频",
   "block.gtceu.large_rock_crusher.tooltip.2": "只允许有§b一个§r能源仓",
-  "material.gtceu.soul_infused": "注能灵魂合金",
+  "material.gtceu.soul_infused": "注灵",
   "material.gtceu.signalum": "信素",
   "material.gtceu.lumium": "流明",
   "material.gtceu.enderium": "末影",
