fix(zh_cn): fix 阿拜多斯隔离室 -> 深渊收容室

--- a/kubejs/assets/gtceu/lang/zh_cn.json
+++ b/kubejs/assets/gtceu/lang/zh_cn.json
@@ -384,7 +384,7 @@
   "gtceu.jei.ore_vein.zapolite_vein": "阿拜多斯鉔普矿脉",
   "gtceu.jei.ore_vein.lautarite_vein": "阿拜多斯碘酸钙矿脉",
   "gtceu.jei.ore_vein.clausthalite_vein": "阿拜多斯硒铅矿矿脉",
-  "gtceu.jei.ore_vein.brimstone_patch": "下界硫磺矿区",
+  "gtceu.jei.ore_vein.brimstone_patch": "下界火硫石矿区",
   "gtceu.jei.ore_vein.berzelianite_vein": "阿拜多斯硒铜矿矿脉",
   "gtceu.jei.ore_vein.cryostone_patch": "下界冰晶石矿区",
   "material.gtceu.gritty_akreyrium": "粗弧光",
