--- a/kubejs/assets/start_core/lang/zh_cn.json
+++ b/kubejs/assets/start_core/lang/zh_cn.json
@@ -302,7 +302,7 @@
   "start_core.multiblock.supreme_turbine.ss_h32_boosting": "超态氦-3加速中",
   "start_core.multiblock.nyinsane_turbine.bec_og_boosting": "气奥稳定的玻色-爱因斯坦凝聚体加速中",
   "start_core:abyssal_containment_room.display_name": "§5至真深渊",
-  "block.start_core.abyssal_containment_room": "阿拜多斯隔离室",
+  "block.start_core.abyssal_containment_room": "深渊收容室",
   "block.start_core.abyssal_containment_room_line": "§5§l至真深渊",
   "start_core.abyssal_containment_room.acr0": "§7你以为自己能窥见它的寂静……可寂静为永恒之舌，而§k永恒§r§7已在昔日低语中呼唤了你的名。",
   "start_core.abyssal_containment_room.acr1": "§d收容深渊",
