fix(zh_cn): Change u*v_parallel_hatch name
* Change them into 史诗, 极巨, 终极 respectively to make their levels
more easier to understand.

--- a/kubejs/assets/start_core/lang/zh_cn.json
+++ b/kubejs/assets/start_core/lang/zh_cn.json
@@ -109,15 +109,15 @@
   "start_core.machine.parallel_hatch_mk6.tooltip": "允许同时处理至多2048个配方。",
   "start_core.machine.parallel_hatch_mk7.tooltip": "允许同时处理至多4096个配方。",
   "block.start_core.uhv_parallel_hatch": "史诗并行控制仓",
-  "block.start_core.uev_parallel_hatch": "巨型并行控制仓",
-  "block.start_core.uiv_parallel_hatch": "高级并行控制仓",
+  "block.start_core.uev_parallel_hatch": "极巨并行控制仓",
+  "block.start_core.uiv_parallel_hatch": "终极并行控制仓",
   "start_core.machine.absolute_parallel_hatch_mk1.tooltip": "允许同时处理至多4个配方。",
   "start_core.machine.absolute_parallel_hatch_mk2.tooltip": "允许同时处理至多8个配方。",
   "start_core.machine.absolute_parallel_hatch_mk3.tooltip": "允许同时处理至多16个配方。",
   "start_core.machine.absolute_parallel_hatch_energy.tooltip": "§6并行不会额外消耗能量。",
   "block.start_core.uhv_absolute_parallel_hatch": "史诗绝对并行掌控仓",
-  "block.start_core.uev_absolute_parallel_hatch": "巨型绝对并行掌控仓",
-  "block.start_core.uiv_absolute_parallel_hatch": "高级绝对并行掌控仓",
+  "block.start_core.uev_absolute_parallel_hatch": "极巨绝对并行掌控仓",
+  "block.start_core.uiv_absolute_parallel_hatch": "终极绝对并行掌控仓",
   "block.start_core.enriched_naquadah_drum": "富集硅岩桶",
   "block.start_core.neutronium_drum": "中子素桶",
   "block.start_core.enriched_naquadah_crate": "富集硅岩板条箱",
